--- a/src/css/main.css
+++ b/src/css/main.css
@@ -79,7 +79,7 @@ div[class*=col-lg-push],
 div[class*=col-lg-pull] {
   position: relative; }
 
-@media all and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .container {
     width: 100%; }
   .col-xs-1 {
@@ -482,3 +482,104 @@ div[class*=col-lg-pull] {
 .rwd-img {
   width: 100%;
   height: auto; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
+
+.text-left {
+  text-align: left; }
+
+.hidden {
+  visibility: hidden; }
+
+.relative {
+  position: relative; }
+
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
+#gap {
+  width: 100%;
+  height: 70px; }
+
+nav {
+  text-align: right;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  margin: auto;
+  background-color: #3e3e43;
+  height: 70px;
+  box-shadow: 0px 2px 5px 2px #222; }
+  nav ul {
+    display: inline-block; }
+
+.menu {
+  font-size: 20px; }
+  .menu .mainMenu {
+    display: inline-block; }
+    .menu .mainMenu a:hover {
+      border-bottom: 3px solid #95d3e4; }
+    .menu .mainMenu a {
+      display: block;
+      padding: 35px 14px 15px;
+      color: #fff;
+      letter-spacing: 1px; }
+
+#signUp {
+  display: inline-block; }
+  #signUp a {
+    color: #fff;
+    font-size: 18px;
+    padding: 0 10px; }
+    #signUp a :hover {
+      color: #ccc; }
+    #signUp a i {
+      padding: 35px 5px 15px; }
+
+#signIn {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  vertical-align: top; }
+  #signIn a {
+    display: block; }
+  #signIn img {
+    width: 100%;
+    height: 100%;
+    margin-top: 15px; }
+  #signIn a:hover img {
+    border: 2px solid #95d3e4;
+    border-radius: 50%; }
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #3e3e43;
+  color: #fff;
+  text-align: right;
+  padding-right: 40px;
+  line-height: 50px;
+  font-size: 14px; }
+
+@media screen and (max-width: 767px) {
+  .menu {
+    padding-right: 20px; }
+    .menu .mainMenu a {
+      color: #fff;
+      background-color: #ccc;
+      padding: 5px; } }
+
+@media all and (max-width: 992px) and (min-width: 768px) {
+  .menu .mainMenu a {
+    font-size: 18px;
+    padding: 35px 10px 15px; } }
