--- a/src/scss/assets/_var.scss
+++ b/src/scss/assets/_var.scss
@@ -1,8 +1,22 @@
-//grid
+//字體大小
+$fz-nav:20px;
+
+
+//顏色
+$steelblue:rgb(70,130,180);
+
+$green:#00ffff;
+
+$blue:rgb(149,211,228);
+
+$gray:#3e3e43;
+
+
+//   grid
 $rwd-xs-breakpoint:767px;	
 $rwd-sm-breakpoint:992px;	
 $rwd-md-breakpoint:1280px;  
-
+// container 寬度
 $grid-xs-container:100%;
 $grid-sm-container:750px;
 $grid-md-container:970px;
