--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ div[class*=col-lg-pull] {
   .col-xs-offset-12 {
     margin-left: 100%; } }
 
-@media all and (max-width: 992px) and (min-width: 768px) {
+@media screen and (max-width: 992px) and (min-width: 768px) {
   .container {
     width: 750px; }
   .col-sm-1 {
@@ -279,7 +279,7 @@ div[class*=col-lg-pull] {
   .col-sm-offset-12 {
     margin-left: 100%; } }
 
-@media all and (max-width: 1280px) and (min-width: 993px) {
+@media screen and (max-width: 1280px) and (min-width: 993px) {
   .container {
     width: 970px; }
   .col-md-1 {
@@ -379,7 +379,7 @@ div[class*=col-lg-pull] {
   .col-md-offset-12 {
     margin-left: 100%; } }
 
-@media all and (min-width: 1281px) {
+@media screen and (min-width: 1281px) {
   .container {
     width: 1170px; }
   .col-lg-1 {
@@ -665,7 +665,7 @@ footer {
   #navButton {
     display: block; } }
 
-@media all and (max-width: 992px) and (min-width: 768px) {
+@media screen and (max-width: 992px) and (min-width: 768px) {
   .menu .mainMenu a {
     font-size: 18px;
     padding: 35px 10px 15px; } }
