--- a/scss/assets/_grid.scss
+++ b/scss/assets/_grid.scss
@@ -1,3 +1,5 @@
+@import "mixin/mediaquery";
+@import "var";
 *{
 	box-sizing: border-box;
 }
@@ -95,7 +97,7 @@ div[class*= col-lg-pull]{position: relative;}
 }
 @include respones(lg) {
 		.container {
-	    width:$grid-lg-container
+	    width:$grid-lg-container;
 	  }
 	@for $i from 1 through $grid-column{
 		.col-lg-#{$i}{
