--- a/scss/page/_nav.scss
+++ b/scss/page/_nav.scss
@@ -17,7 +17,7 @@ nav{
 	left: 0;
 	top:0;
 	margin:auto;
-	background-color: $gray;
+	background-color: $grey;
 	height: 70px;
 	box-shadow: 0px 2px 5px 2px #222;
 	z-index: 100;
@@ -145,7 +145,7 @@ nav{
 footer{
 	width: 100%;
 	height: 50px;
-	background-color: $gray;
+	background-color: $grey;
 	color:#fff;
 	text-align: right;
 	padding-right:40px;
