--- a/scss/assets/_color.scss
+++ b/scss/assets/_color.scss
@@ -15,20 +15,14 @@ $blue-green:#86d4f5;
 
 $green-blue:#0ce3ec;
 
-$blue:#6bc2f4;
+$blue:#4f9cdd;
 
-$steelblue:rgb(70,130,180);
-
-$red:#f18f96;
+$orange:#ff8600;
 
 $grey:#3e3e43;
+
 $light-grey:#9e9e9e;
 
-$yellow:#fff100;
-
-//for
-$a-bgc:#334365;
-$f-green:#69b6b5;
 
 
 
