--- a/css/guideline.css
+++ b/css/guideline.css
@@ -1,489 +1,4 @@
 * {
-  box-sizing: border-box; }
-
-.container {
-  margin: auto;
-  padding-right: 10px;
-  padding-left: 10px; }
-
-.row {
-  margin-left: -10px;
-  margin-right: -10px; }
-
-.container:after,
-.row:after {
-  content: '';
-  display: block;
-  height: 0;
-  width: 100%;
-  clear: both; }
-
-.clear {
-  clear: both; }
-
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-2, .col-sm-2, .col-md-2, .col-lg-2 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-3, .col-sm-3, .col-md-3, .col-lg-3 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-4, .col-sm-4, .col-md-4, .col-lg-4 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-5, .col-sm-5, .col-md-5, .col-lg-5 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-6, .col-sm-6, .col-md-6, .col-lg-6 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-7, .col-sm-7, .col-md-7, .col-lg-7 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-8, .col-sm-8, .col-md-8, .col-lg-8 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-9, .col-sm-9, .col-md-9, .col-lg-9 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-10, .col-sm-10, .col-md-10, .col-lg-10 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-11, .col-sm-11, .col-md-11, .col-lg-11 {
-  float: left;
-  padding: 0 10px; }
-
-.col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-  float: left;
-  padding: 0 10px; }
-
-div[class*=col-xs-push],
-div[class*=col-xs-pull],
-div[class*=col-sm-push],
-div[class*=col-sm-pull],
-div[class*=col-md-push],
-div[class*=col-md-pull],
-div[class*=col-lg-push],
-div[class*=col-lg-pull] {
-  position: relative; }
-
-@media screen and (max-width: 767px) {
-  .container {
-    width: 100%; }
-  .col-xs-1 {
-    width: 8.33333%; }
-  .col-xs-push-1 {
-    left: 8.33333%; }
-  .col-xs-pull-1 {
-    right: 8.33333%; }
-  .col-xs-offset-1 {
-    margin-left: 8.33333%; }
-  .col-xs-2 {
-    width: 16.66667%; }
-  .col-xs-push-2 {
-    left: 16.66667%; }
-  .col-xs-pull-2 {
-    right: 16.66667%; }
-  .col-xs-offset-2 {
-    margin-left: 16.66667%; }
-  .col-xs-3 {
-    width: 25%; }
-  .col-xs-push-3 {
-    left: 25%; }
-  .col-xs-pull-3 {
-    right: 25%; }
-  .col-xs-offset-3 {
-    margin-left: 25%; }
-  .col-xs-4 {
-    width: 33.33333%; }
-  .col-xs-push-4 {
-    left: 33.33333%; }
-  .col-xs-pull-4 {
-    right: 33.33333%; }
-  .col-xs-offset-4 {
-    margin-left: 33.33333%; }
-  .col-xs-5 {
-    width: 41.66667%; }
-  .col-xs-push-5 {
-    left: 41.66667%; }
-  .col-xs-pull-5 {
-    right: 41.66667%; }
-  .col-xs-offset-5 {
-    margin-left: 41.66667%; }
-  .col-xs-6 {
-    width: 50%; }
-  .col-xs-push-6 {
-    left: 50%; }
-  .col-xs-pull-6 {
-    right: 50%; }
-  .col-xs-offset-6 {
-    margin-left: 50%; }
-  .col-xs-7 {
-    width: 58.33333%; }
-  .col-xs-push-7 {
-    left: 58.33333%; }
-  .col-xs-pull-7 {
-    right: 58.33333%; }
-  .col-xs-offset-7 {
-    margin-left: 58.33333%; }
-  .col-xs-8 {
-    width: 66.66667%; }
-  .col-xs-push-8 {
-    left: 66.66667%; }
-  .col-xs-pull-8 {
-    right: 66.66667%; }
-  .col-xs-offset-8 {
-    margin-left: 66.66667%; }
-  .col-xs-9 {
-    width: 75%; }
-  .col-xs-push-9 {
-    left: 75%; }
-  .col-xs-pull-9 {
-    right: 75%; }
-  .col-xs-offset-9 {
-    margin-left: 75%; }
-  .col-xs-10 {
-    width: 83.33333%; }
-  .col-xs-push-10 {
-    left: 83.33333%; }
-  .col-xs-pull-10 {
-    right: 83.33333%; }
-  .col-xs-offset-10 {
-    margin-left: 83.33333%; }
-  .col-xs-11 {
-    width: 91.66667%; }
-  .col-xs-push-11 {
-    left: 91.66667%; }
-  .col-xs-pull-11 {
-    right: 91.66667%; }
-  .col-xs-offset-11 {
-    margin-left: 91.66667%; }
-  .col-xs-12 {
-    width: 100%; }
-  .col-xs-push-12 {
-    left: 100%; }
-  .col-xs-pull-12 {
-    right: 100%; }
-  .col-xs-offset-12 {
-    margin-left: 100%; } }
-
-@media screen and (max-width: 992px) and (min-width: 768px) {
-  .container {
-    width: 750px; }
-  .col-sm-1 {
-    width: 8.33333%; }
-  .col-sm-push-1 {
-    left: 8.33333%; }
-  .col-sm-pull-1 {
-    right: 8.33333%; }
-  .col-sm-offset-1 {
-    margin-left: 8.33333%; }
-  .col-sm-2 {
-    width: 16.66667%; }
-  .col-sm-push-2 {
-    left: 16.66667%; }
-  .col-sm-pull-2 {
-    right: 16.66667%; }
-  .col-sm-offset-2 {
-    margin-left: 16.66667%; }
-  .col-sm-3 {
-    width: 25%; }
-  .col-sm-push-3 {
-    left: 25%; }
-  .col-sm-pull-3 {
-    right: 25%; }
-  .col-sm-offset-3 {
-    margin-left: 25%; }
-  .col-sm-4 {
-    width: 33.33333%; }
-  .col-sm-push-4 {
-    left: 33.33333%; }
-  .col-sm-pull-4 {
-    right: 33.33333%; }
-  .col-sm-offset-4 {
-    margin-left: 33.33333%; }
-  .col-sm-5 {
-    width: 41.66667%; }
-  .col-sm-push-5 {
-    left: 41.66667%; }
-  .col-sm-pull-5 {
-    right: 41.66667%; }
-  .col-sm-offset-5 {
-    margin-left: 41.66667%; }
-  .col-sm-6 {
-    width: 50%; }
-  .col-sm-push-6 {
-    left: 50%; }
-  .col-sm-pull-6 {
-    right: 50%; }
-  .col-sm-offset-6 {
-    margin-left: 50%; }
-  .col-sm-7 {
-    width: 58.33333%; }
-  .col-sm-push-7 {
-    left: 58.33333%; }
-  .col-sm-pull-7 {
-    right: 58.33333%; }
-  .col-sm-offset-7 {
-    margin-left: 58.33333%; }
-  .col-sm-8 {
-    width: 66.66667%; }
-  .col-sm-push-8 {
-    left: 66.66667%; }
-  .col-sm-pull-8 {
-    right: 66.66667%; }
-  .col-sm-offset-8 {
-    margin-left: 66.66667%; }
-  .col-sm-9 {
-    width: 75%; }
-  .col-sm-push-9 {
-    left: 75%; }
-  .col-sm-pull-9 {
-    right: 75%; }
-  .col-sm-offset-9 {
-    margin-left: 75%; }
-  .col-sm-10 {
-    width: 83.33333%; }
-  .col-sm-push-10 {
-    left: 83.33333%; }
-  .col-sm-pull-10 {
-    right: 83.33333%; }
-  .col-sm-offset-10 {
-    margin-left: 83.33333%; }
-  .col-sm-11 {
-    width: 91.66667%; }
-  .col-sm-push-11 {
-    left: 91.66667%; }
-  .col-sm-pull-11 {
-    right: 91.66667%; }
-  .col-sm-offset-11 {
-    margin-left: 91.66667%; }
-  .col-sm-12 {
-    width: 100%; }
-  .col-sm-push-12 {
-    left: 100%; }
-  .col-sm-pull-12 {
-    right: 100%; }
-  .col-sm-offset-12 {
-    margin-left: 100%; } }
-
-@media screen and (max-width: 1280px) and (min-width: 993px) {
-  .container {
-    width: 970px; }
-  .col-md-1 {
-    width: 8.33333%; }
-  .col-md-push-1 {
-    left: 8.33333%; }
-  .col-md-pull-1 {
-    right: 8.33333%; }
-  .col-md-offset-1 {
-    margin-left: 8.33333%; }
-  .col-md-2 {
-    width: 16.66667%; }
-  .col-md-push-2 {
-    left: 16.66667%; }
-  .col-md-pull-2 {
-    right: 16.66667%; }
-  .col-md-offset-2 {
-    margin-left: 16.66667%; }
-  .col-md-3 {
-    width: 25%; }
-  .col-md-push-3 {
-    left: 25%; }
-  .col-md-pull-3 {
-    right: 25%; }
-  .col-md-offset-3 {
-    margin-left: 25%; }
-  .col-md-4 {
-    width: 33.33333%; }
-  .col-md-push-4 {
-    left: 33.33333%; }
-  .col-md-pull-4 {
-    right: 33.33333%; }
-  .col-md-offset-4 {
-    margin-left: 33.33333%; }
-  .col-md-5 {
-    width: 41.66667%; }
-  .col-md-push-5 {
-    left: 41.66667%; }
-  .col-md-pull-5 {
-    right: 41.66667%; }
-  .col-md-offset-5 {
-    margin-left: 41.66667%; }
-  .col-md-6 {
-    width: 50%; }
-  .col-md-push-6 {
-    left: 50%; }
-  .col-md-pull-6 {
-    right: 50%; }
-  .col-md-offset-6 {
-    margin-left: 50%; }
-  .col-md-7 {
-    width: 58.33333%; }
-  .col-md-push-7 {
-    left: 58.33333%; }
-  .col-md-pull-7 {
-    right: 58.33333%; }
-  .col-md-offset-7 {
-    margin-left: 58.33333%; }
-  .col-md-8 {
-    width: 66.66667%; }
-  .col-md-push-8 {
-    left: 66.66667%; }
-  .col-md-pull-8 {
-    right: 66.66667%; }
-  .col-md-offset-8 {
-    margin-left: 66.66667%; }
-  .col-md-9 {
-    width: 75%; }
-  .col-md-push-9 {
-    left: 75%; }
-  .col-md-pull-9 {
-    right: 75%; }
-  .col-md-offset-9 {
-    margin-left: 75%; }
-  .col-md-10 {
-    width: 83.33333%; }
-  .col-md-push-10 {
-    left: 83.33333%; }
-  .col-md-pull-10 {
-    right: 83.33333%; }
-  .col-md-offset-10 {
-    margin-left: 83.33333%; }
-  .col-md-11 {
-    width: 91.66667%; }
-  .col-md-push-11 {
-    left: 91.66667%; }
-  .col-md-pull-11 {
-    right: 91.66667%; }
-  .col-md-offset-11 {
-    margin-left: 91.66667%; }
-  .col-md-12 {
-    width: 100%; }
-  .col-md-push-12 {
-    left: 100%; }
-  .col-md-pull-12 {
-    right: 100%; }
-  .col-md-offset-12 {
-    margin-left: 100%; } }
-
-@media screen and (min-width: 1281px) {
-  .container {
-    width: 1170px; }
-  .col-lg-1 {
-    width: 8.33333%; }
-  .col-lg-push-1 {
-    left: 8.33333%; }
-  .col-lg-pull-1 {
-    right: 8.33333%; }
-  .col-lg-offset-1 {
-    margin-left: 8.33333%; }
-  .col-lg-2 {
-    width: 16.66667%; }
-  .col-lg-push-2 {
-    left: 16.66667%; }
-  .col-lg-pull-2 {
-    right: 16.66667%; }
-  .col-lg-offset-2 {
-    margin-left: 16.66667%; }
-  .col-lg-3 {
-    width: 25%; }
-  .col-lg-push-3 {
-    left: 25%; }
-  .col-lg-pull-3 {
-    right: 25%; }
-  .col-lg-offset-3 {
-    margin-left: 25%; }
-  .col-lg-4 {
-    width: 33.33333%; }
-  .col-lg-push-4 {
-    left: 33.33333%; }
-  .col-lg-pull-4 {
-    right: 33.33333%; }
-  .col-lg-offset-4 {
-    margin-left: 33.33333%; }
-  .col-lg-5 {
-    width: 41.66667%; }
-  .col-lg-push-5 {
-    left: 41.66667%; }
-  .col-lg-pull-5 {
-    right: 41.66667%; }
-  .col-lg-offset-5 {
-    margin-left: 41.66667%; }
-  .col-lg-6 {
-    width: 50%; }
-  .col-lg-push-6 {
-    left: 50%; }
-  .col-lg-pull-6 {
-    right: 50%; }
-  .col-lg-offset-6 {
-    margin-left: 50%; }
-  .col-lg-7 {
-    width: 58.33333%; }
-  .col-lg-push-7 {
-    left: 58.33333%; }
-  .col-lg-pull-7 {
-    right: 58.33333%; }
-  .col-lg-offset-7 {
-    margin-left: 58.33333%; }
-  .col-lg-8 {
-    width: 66.66667%; }
-  .col-lg-push-8 {
-    left: 66.66667%; }
-  .col-lg-pull-8 {
-    right: 66.66667%; }
-  .col-lg-offset-8 {
-    margin-left: 66.66667%; }
-  .col-lg-9 {
-    width: 75%; }
-  .col-lg-push-9 {
-    left: 75%; }
-  .col-lg-pull-9 {
-    right: 75%; }
-  .col-lg-offset-9 {
-    margin-left: 75%; }
-  .col-lg-10 {
-    width: 83.33333%; }
-  .col-lg-push-10 {
-    left: 83.33333%; }
-  .col-lg-pull-10 {
-    right: 83.33333%; }
-  .col-lg-offset-10 {
-    margin-left: 83.33333%; }
-  .col-lg-11 {
-    width: 91.66667%; }
-  .col-lg-push-11 {
-    left: 91.66667%; }
-  .col-lg-pull-11 {
-    right: 91.66667%; }
-  .col-lg-offset-11 {
-    margin-left: 91.66667%; }
-  .col-lg-12 {
-    width: 100%; }
-  .col-lg-push-12 {
-    left: 100%; }
-  .col-lg-pull-12 {
-    right: 100%; }
-  .col-lg-offset-12 {
-    margin-left: 100%; } }
-
-.rwd-img {
-  width: 100%;
-  height: auto; }
-
-* {
   padding: 0px;
   margin: 0; }
 
@@ -525,7 +40,8 @@ div[class*=col-lg-pull] {
     display: block;
     text-decoration: none;
     line-height: 35px;
-    font-size: 18px; }
+    font-size: 18px;
+    letter-spacing: 2px; }
 
 .btn-lg {
   width: 155px;
@@ -539,7 +55,8 @@ div[class*=col-lg-pull] {
     display: block;
     text-decoration: none;
     line-height: 55px;
-    font-size: 18px; }
+    font-size: 18px;
+    letter-spacing: 2px; }
 
 .btn-purple {
   background-color: #aa89bd;
@@ -547,16 +64,10 @@ div[class*=col-lg-pull] {
   .btn-purple a {
     color: #f3f7f7; }
 
-.btn-steelblue {
-  background-color: steelblue;
-  border: 1px solid steelblue; }
-  .btn-steelblue a {
-    color: #f3f7f7; }
-
-.btn-green-blue {
-  background-color: #0ce3ec;
-  border: 1px solid #0ce3ec; }
-  .btn-green-blue a {
+.btn-blue {
+  background-color: #4f9cdd;
+  border: 1px solid #4f9cdd; }
+  .btn-blue a {
     color: #f3f7f7; }
 
 .btn-purple1 {
@@ -565,17 +76,11 @@ div[class*=col-lg-pull] {
   .btn-purple1 a {
     color: #aa89bd; }
 
-.btn-steelblue1 {
+.btn-blue1 {
   background-color: transparent;
-  border: 1px solid steelblue; }
-  .btn-steelblue1 a {
-    color: steelblue; }
-
-.btn-green-blue1 {
-  background-color: transparent;
-  border: 1px solid #0ce3ec; }
-  .btn-green-blue1 a {
-    color: #0ce3ec; }
+  border: 1px solid #4f9cdd; }
+  .btn-blue1 a {
+    color: #4f9cdd; }
 
 .item {
   width: 150px;
@@ -612,25 +117,13 @@ div[class*=col-lg-pull] {
   background-color: #0ce3ec; }
 
 .item9 {
-  background-color: #6bc2f4; }
+  background-color: #4f9cdd; }
 
 .item10 {
-  background-color: steelblue; }
-
-.item11 {
-  background-color: #f18f96; }
+  background-color: #ff8600; }
 
 .item12 {
   background-color: #9e9e9e; }
 
 .item13 {
   background-color: #3e3e43; }
-
-.item14 {
-  background-color: #fff100; }
-
-.item15 {
-  background-color: #334365; }
-
-.item16 {
-  background-color: #69b6b5; }
