--- a/src/scss/layout/_xs.scss
+++ b/src/scss/layout/_xs.scss
@@ -1,103 +1,229 @@
 @include respones(xs) {
-	#navButton:before,
-	#navButton:after{
-		content:'';
-		display:block;
+	body {
+		background-image: url('../img/p1.jpg');
+		background-size: cover;
+	}
+
+	#logo {
+		float: left;
+		width: 10%;
+
+		img {
+			height: 90px;
+		}
+	}
+
+	#nav {
+		position: fixed;
+		right: 0;
+		left: 0;
+		top: 0;
+		margin: auto;
+		// background-image: linear-gradient(to left,rgba(0,0,0,0.4) 30%, rgba(255,255,255,0.2) 75%);
+		background-color: $o-black;
+		height: 90px;
+		z-index: 100;
+	}
+
+	.menu {
+		font-size: $fz-nav;
+		float: left;
+		text-align: right;
+		width: 80%;
+
+		.mainMenu {
+			display: inline-block;
+			margin: 0 15px;
+
+			a:hover {
+				border-bottom: 3px solid $blue;
+				color: $white;
+			}
+
+			a {
+				display: block;
+				padding: 0 2px;
+				line-height: 35px;
+				vertical-align: middle;
+				color: $light-grey;
+				letter-spacing: 1px;
+			}
+		}
+	}
+
+	#signUp {
+		display: inline-block;
+		width: 5%;
+		text-align: center;
+
+		a {
+			color: #fff;
+			font-size: $fz-nav - 2px;
+			padding: 0 10px;
+			line-height: 70px;
+
+			:hover {
+				color: $light-grey;
+			}
+
+			i {
+				font-size: 16px;
+			}
+		}
+	}
+
+	#signIn {
+		display: inline-block;
+		width: 70px;
+		height: 70px;
+		vertical-align: middle;
+		width: 5%;
+
+		a {
+			display: block;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			// margin-top:15px;
+		}
+
+		a:hover img {
+			border: 2px solid $blue;
+			border-radius: 50%;
+		}
+	}
+	//for mobile
+	#navButtonHidden {
+		position: absolute;
+		right: -1000px;
+	}
+
+	#navButton {
+		position: absolute;
+		top: 18px;
+		left: 15px;
+		width: 40px;
+		height: 40px;
+		background: #45484d;
+		color: #f2f2f2;
+		border-radius: 50%;
+		display: none;
+	}
+
+	#logo {
+		text-align: center;
+	}
+
+	#nav {
+		margin: auto;
+	}
+
+	#navButton:after,
+	#navButton:before {
+		content: '';
+		display: block;
 		position: absolute;
 		width: 16px;
 		height: 2px;
-		background-color:#fff;
+		background-color: #fff;
 		left: 0;
 		right: 0;
 		top: 0;
 		bottom: 0;
 		margin: auto;
-		transition: .8s;
+		transition: 0.8s;
 	}
-	#navButton:before{
-		box-shadow: 0 -6px 0px #fff;
+
+	#navButton:before {
+		box-shadow: 0 -6px 0 #fff;
 	}
-	#navButton:after{
-		box-shadow: 0 6px 0px #fff;
+
+	#navButton:after {
+		box-shadow: 0 6px 0 #fff;
 	}
-	#navButtonHidden:checked ~ #navButton:before{
+
+	#navButtonHidden:checked ~ #navButton:before {
 		transform: rotate(45deg);
 		box-shadow: none;
 	}
-	#navButtonHidden:checked ~ #navButton:after{
+
+	#navButtonHidden:checked ~ #navButton:after {
 		transform: rotate(-45deg);
 		box-shadow: none;
 	}
-	#navButtonHidden:checked ~ .menu{
-		display:block;
-		animation:mobileNav 1s both cubic-bezier(.13,.27,.06,.82);
-	}
-@keyframes mobileNav{
-	0%{opacity:0;}
-	100%{opacity:1;}
-}
-// @keyframes bb{
-// 	0%{right:0px;top:0px;opacity:0}
-// 	100%{right:40px;top:-40px;opacity:1}
-// }
-// @keyframes cc{
-// 	0%{right:0px;top:0px;opacity:0}
-// 	100%{right:70px;top:-10px;opacity:1}
-// }
-// @keyframes dd{
-// 	0%{right:0px;top:0px;opacity:0}
-// 	100%{right:100px;top:20px;opacity:1}
-// }
 
+	#navButtonHidden:checked ~ .menu {
+		// display: block;
+		animation: mobileNav 1s both cubic-bezier(.13,.27,.06,.82);
 
-	.menu{
-		position:absolute;
-		left:0;top: 75px;right:0;
-		margin:auto;
-		text-align:center;
-		background-color: rgba(0,0,0,0.9);
-		width: 100%;
-		height: 300px;
-		display:none;
-		:first-child{
-			padding-top:45px;
-		}
-		:after{
-			content:'';
-			width: 280px;
-			height: 280px;
-			background-color:  rgba(0,0,0,0.9);
-			position:absolute;
-			top:0;bottom: 0;
-			left: 0;right: 0;
-			border-radius:50%;
-			margin: auto;
-			box-shadow:0px 0px 2px 2px #fff;
-			z-index:-1;
-		}
-		.mainMenu{
-				display:block;
-				a{
-					color:$white;
-					font-size: 16px;
-					padding: 20px;
-				}
-				a:hover{
-					border-bottom: none;
-				}
+		:after {
+			animation: mobileNav2 1s both cubic-bezier(.13,.27,.06,.82);
 		}
 	}
-	#navButton{
-		display:block;
+	@keyframes mobileNav {
+		0% {
+			opacity: 0;
+		}
+
+		100% {
+			opacity: 1;
+		}
+	}
+	@keyframes mobileNav2 {
+		0% {
+			left: -300px;
+		}
+
+		100% {
+			left: -150px;
+		}
 	}
 
+	.menu {
+		position: absolute;
+		left: 0;
+		top: 75px;
+		right: 0;
+		margin: auto;
+		text-align: center;
+		height: 200px;
+		display: none;
 
+		:after {
+			content: '';
+			width: 300px;
+			height: 300px;
+			background-color: $o-black;
+			position: fixed;
+			top: 0;
+			bottom: 0;
+			left: -150px;
+			right: 0;
+			border-radius: 50%;
+			z-index: -20;
+			display: none;
+		}
 
+		.mainMenu {
+			display: block;
+			text-align: left;
 
+			a {
+				color: $white;
+				font-size: 16px;
+				padding: 3px 0;
+			}
 
+			a:hover {
+				border-bottom: none;
+			}
+		}
+	}
 
-
-
-
-
+	#navButton {
+		display: block;
+		z-index: 100;
+	}
 }
