--- a/src/scss/assets/_common.scss
+++ b/src/scss/assets/_common.scss
@@ -1,12 +1,20 @@
+*{
+	text-decoration: none;
+	list-style-type: none;
+	box-sizing: border-box;
+	margin:0;
+	padding:0;
+}
+
 .text-center{
 	text-align: center;
-} 
+}
 .text-right{
 	text-align: right;
-} 
+}
 .text-left{
 	text-align: left;
-} 
+}
 .hidden{
 	visibility: hidden;
 }
