--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -1,6 +1,9 @@
-@import "xs";
-@import "sm";
-@import "md";
-@import "lg";
-
+@import "pageMain/xs";
+@import "pageMain/sm";
+@import "pageMain/md";
+@import "pageMain/lg";
+@import "pageBranch/xs";
+@import "pageBranch/sm";
+@import "pageBranch/md";
+@import "pageBranch/lg";
 //此處為 共用設定
