--- a/src/scss/assets/mixin/_mediaquery.scss
+++ b/src/scss/assets/mixin/_mediaquery.scss
@@ -12,12 +12,12 @@
     }
 
     @else if $screen-size == "md" {
-        @media screen and (max-width: $rwd-md-breakpoint) and (min-width: $rwd-sm-breakpoint + 1) {
+        @media screen and (min-width: $rwd-sm-breakpoint + 1) {
              @content;
         }
     }
     @else if $screen-size == "lg" {
-        @media screen and (min-width: $rwd-md-breakpoint + 1) {
+        @media screen and (min-width: $rwd-md-breakpoint) {
              @content;
         }
 }
