--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,42 @@
+@charset "UTF-8";
 @import url(../libs/font-awesome/css/font-awesome.min.css);
-* {
-  text-decoration: none;
-  list-style-type: none;
-  box-sizing: border-box;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul, li {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+* {
+  box-sizing: border-box; }
+
+a {
+  text-decoration: none; }
 
 .text-center {
   text-align: center; }
@@ -22,7 +54,7 @@
   position: relative; }
 
 .btn {
-  width: 85px;
+  width: 65px;
   height: 35px;
   text-align: center;
   display: inline-block;
@@ -548,86 +580,109 @@ div[class*=col-lg-pull] {
   width: 100%;
   height: auto; }
 
+.menu li a:after {
+  position: absolute;
+  top: -5px;
+  right: 0;
+  font-size: 16px;
+  color: #9e9e9e; }
+
+.menu li:nth-of-type(1) a:after {
+  content: '觀星活動'; }
+
+.menu li:nth-of-type(2) a:after {
+  content: '星際論壇'; }
+
+.menu li:nth-of-type(3) a:after {
+  content: '照片'; }
+
+.menu li:nth-of-type(4) a:after {
+  content: '星知識';
+  right: 5px; }
+
+#nav {
+  height: 80px;
+  width: 100%;
+  background-color: #020202;
+  position: fixed;
+  top: 0;
+  left: 0; }
+
+#navButtonHidden {
+  position: absolute;
+  left: -1000px; }
+
 @media screen and (max-width: 767px) {
-  body {
-    background-image: url("../img/p1.jpg");
-    background-size: cover; }
   #logo {
-    float: left;
-    width: 10%; }
-    #logo img {
-      height: 90px; }
-  #nav {
-    position: fixed;
+    float: none;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    padding-top: 15px; }
+  .menu li a:after {
+    position: absolute;
+    top: 0;
     right: 0;
     left: 0;
-    top: 0;
+    bottom: 0;
+    font-size: 16px;
+    color: #9e9e9e; }
+  .menu li:nth-of-type(1) a:after {
+    content: '觀星活動'; }
+  .menu li:nth-of-type(2) a:after {
+    content: '星際論壇'; }
+  .menu li:nth-of-type(3) a:after {
+    content: '照片'; }
+  .menu li:nth-of-type(4) a:after {
+    content: '星知識';
+    right: 5px; }
+  .mainMenu li {
+    display: inline-block;
+    position: relative; }
+  .mainMenu.menu {
+    background-color: #020202;
     margin: auto;
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 90px;
-    z-index: 100; }
-  .menu {
-    font-size: 20px;
-    float: left;
-    text-align: right;
-    width: 80%; }
-    .menu .mainMenu {
-      display: inline-block;
-      margin: 0 15px; }
-      .menu .mainMenu a:hover {
-        border-bottom: 3px solid #4f9cdd;
-        color: #f3f7f7; }
-      .menu .mainMenu a {
-        display: block;
-        padding: 0 2px;
-        line-height: 35px;
-        vertical-align: middle;
-        color: #9e9e9e;
-        letter-spacing: 1px; }
-  #signUp {
-    display: inline-block;
-    width: 5%;
-    text-align: center; }
-    #signUp a {
-      color: #fff;
-      font-size: 18px;
-      padding: 0 10px;
-      line-height: 70px; }
-      #signUp a :hover {
-        color: #9e9e9e; }
-      #signUp a i {
-        font-size: 16px; }
-  #signIn {
-    display: inline-block;
-    width: 70px;
-    height: 70px;
-    vertical-align: middle;
-    width: 5%; }
-    #signIn a {
-      display: block; }
-    #signIn img {
-      width: 100%;
-      height: 100%; }
-    #signIn a:hover img {
-      border: 2px solid #4f9cdd;
-      border-radius: 50%; }
-  #navButtonHidden {
+    text-align: center;
     position: absolute;
-    right: -1000px; }
+    top: 0px;
+    left: -300px;
+    bottom: 0;
+    height: 700px;
+    width: 700px;
+    border-radius: 50%;
+    padding-top: 370px;
+    padding-left: 200px;
+    z-index: -2;
+    transform: scale(0);
+    transition: 0.8s cubic-bezier(0.13, 0.27, 0.06, 0.82); }
+    .mainMenu.menu li {
+      display: block;
+      text-align: center; }
+    .mainMenu.menu a {
+      display: block;
+      padding: 20px 10px;
+      font-size: 20px;
+      color: #f3f7f7; }
+  .mainMenu.signArea {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding-top: 25px; }
+    .mainMenu.signArea .btn {
+      width: 60px;
+      font-size: 12px;
+      background-color: transparent;
+      border: 0;
+      display: inline-block; }
   #navButton {
     position: absolute;
-    top: 18px;
+    top: 25px;
     left: 15px;
     width: 40px;
     height: 40px;
     background: #45484d;
     color: #f2f2f2;
-    border-radius: 50%;
-    display: none; }
-  #logo {
-    text-align: center; }
-  #nav {
-    margin: auto; }
+    border-radius: 50%; }
   #navButton:after,
   #navButton:before {
     content: '';
@@ -653,218 +708,67 @@ div[class*=col-lg-pull] {
     transform: rotate(-45deg);
     box-shadow: none; }
   #navButtonHidden:checked ~ .menu {
-    animation: mobileNav 1s both cubic-bezier(0.13, 0.27, 0.06, 0.82); }
-    #navButtonHidden:checked ~ .menu :after {
-      animation: mobileNav2 1s both cubic-bezier(0.13, 0.27, 0.06, 0.82); }
-  @keyframes mobileNav {
-    0% {
-      opacity: 0; }
-    100% {
-      opacity: 1; } }
-  @keyframes mobileNav2 {
-    0% {
-      left: -300px; }
-    100% {
-      left: -150px; } }
-  .menu {
-    position: absolute;
-    left: 0;
-    top: 75px;
-    right: 0;
-    margin: auto;
+    top: 150px;
+    transform: scale(1);
+    transition: 0.8s cubic-bezier(0.13, 0.27, 0.06, 0.82); } }
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  #logo {
+    float: none;
     text-align: center;
-    height: 200px;
-    display: none; }
-    .menu :after {
-      content: '';
-      width: 300px;
-      height: 300px;
-      background-color: rgba(0, 0, 0, 0.6);
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: -150px;
-      right: 0;
-      border-radius: 50%;
-      z-index: -20;
+    width: 100%;
+    margin: auto;
+    padding-top: 15px; }
+  .mainMenu {
+    float: left;
+    padding-top: 30px; }
+    .mainMenu li {
+      display: inline-block;
+      position: relative; }
+    .mainMenu.menu {
       display: none; }
-    .menu .mainMenu {
-      display: block;
-      text-align: left; }
-      .menu .mainMenu a {
-        color: #f3f7f7;
-        font-size: 16px;
-        padding: 3px 0; }
-      .menu .mainMenu a:hover {
-        border-bottom: none; }
-  #navButton {
-    display: block;
-    z-index: 100; } }
+    .mainMenu.signArea {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      padding-top: 25px; }
+      .mainMenu.signArea .btn {
+        width: 60px;
+        font-size: 12px;
+        background-color: transparent;
+        border: 0px;
+        display: inline-block; } }
 
 @media screen and (min-width: 993px) {
-  body {
-    background-image: url("../img/p1.jpg");
-    background-size: cover; }
-  #gap {
-    width: 100%;
-    height: 90px; }
   #logo {
     float: left;
-    width: 10%; }
-    #logo img {
-      height: 90px; }
-  #nav {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 90px;
-    z-index: 100; }
-  .menu {
-    font-size: 20px;
+    width: 12%;
+    padding-top: 15px; }
+  .mainMenu {
     float: left;
-    text-align: right;
-    width: 80%; }
-    .menu .mainMenu {
+    padding-top: 30px; }
+    .mainMenu li {
       display: inline-block;
-      margin: 0 15px; }
-      .menu .mainMenu a:hover {
-        border-bottom: 3px solid #4f9cdd;
-        color: #f3f7f7; }
-      .menu .mainMenu a {
+      position: relative; }
+    .mainMenu.menu {
+      width: 74%;
+      text-align: right; }
+      .mainMenu.menu a {
         display: block;
-        padding: 0 2px;
-        line-height: 35px;
-        vertical-align: middle;
-        color: #9e9e9e;
+        color: #f3f7f7;
+        font-size: 20px;
+        padding: 12px;
         letter-spacing: 1px; }
-  #signUp {
-    display: inline-block;
-    width: 5%;
-    text-align: center; }
-    #signUp a {
-      color: #fff;
-      font-size: 18px;
-      padding: 0 10px;
-      line-height: 70px; }
-      #signUp a :hover {
-        color: #9e9e9e; }
-      #signUp a i {
-        font-size: 16px; }
-  #signIn {
-    display: inline-block;
-    width: 70px;
-    height: 70px;
-    vertical-align: middle;
-    width: 5%;
-    padding-top: 5px; }
-    #signIn a {
-      display: block; }
-    #signIn img {
-      width: 100%;
-      height: 100%; }
-    #signIn a:hover img {
-      border: 2px solid #4f9cdd;
-      border-radius: 50%; }
-  #navButtonHidden {
-    position: absolute;
-    right: -1000px; }
-  #navButton {
-    position: absolute;
-    top: 18px;
-    left: 15px;
-    width: 40px;
-    height: 40px;
-    background: #45484d;
-    color: #f2f2f2;
-    border-radius: 50%;
-    display: none; } }
-
-@media screen and (min-width: 1280px) {
-  body {
-    background-image: url("../img/p1.jpg");
-    background-size: cover; }
-  #logo {
-    float: left;
-    width: 10%; }
-    #logo img {
-      height: 90px; }
-  #nav {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 90px;
-    width: 100%;
-    z-index: 100; }
-    #nav :after {
-      content: '';
-      display: block;
-      width: 0;
-      height: 0;
-      clear: both; }
-  .menu {
-    font-size: 20px;
-    float: left;
-    text-align: right;
-    width: 80%; }
-    .menu .mainMenu {
-      display: inline-block;
-      margin: 0 15px;
-      height: 90px; }
-      .menu .mainMenu a:hover {
-        border-bottom: 3px solid #4f9cdd;
-        color: #f3f7f7; }
-      .menu .mainMenu a {
-        display: block;
-        padding: 0 2px;
-        line-height: 90px;
-        vertical-align: middle;
-        color: #9e9e9e;
-        letter-spacing: 1px; }
-  #signUp {
-    display: inline-block;
-    float: left;
-    width: 5%;
-    text-align: center; }
-    #signUp a {
-      color: #fff;
-      font-size: 18px;
-      padding: 0 10px;
-      line-height: 70px; }
-      #signUp a :hover {
-        color: #9e9e9e; }
-      #signUp a i {
-        font-size: 16px; }
-  #signIn {
-    display: inline-block;
-    width: 5%;
-    vertical-align: middle; }
-    #signIn a {
-      display: block; }
-    #signIn img {
-      width: 50px;
-      height: 50px; }
-    #signIn a:hover img {
-      border: 2px solid #4f9cdd;
-      border-radius: 50%; }
-  #navButtonHidden {
-    position: absolute;
-    right: -1000px; }
-  #navButton {
-    position: absolute;
-    top: 18px;
-    left: 15px;
-    width: 40px;
-    height: 40px;
-    background: #45484d;
-    color: #f2f2f2;
-    border-radius: 50%;
-    display: none; } }
+        .mainMenu.menu a span {
+          font-size: 24px;
+          font-weight: 900; }
+    .mainMenu.signArea {
+      width: 14%;
+      text-align: right; }
+  .menu a:hover:after {
+    color: white; }
+  .menu a:hover {
+    border-bottom: 4px solid #86d4f5; } }
 
 footer {
   width: 100%;
