--- a/src/css/main.css
+++ b/src/css/main.css
@@ -779,3 +779,609 @@ footer {
   padding-right: 40px;
   line-height: 50px;
   font-size: 14px; }
+
+body, html {
+  font-family: "微軟正黑體"; }
+
+.table {
+  display: table;
+  border-collapse: collapse; }
+
+.thead {
+  display: table-header-group; }
+
+.tbody {
+  display: table-row-group; }
+
+.tr {
+  display: table-row; }
+
+.tr:after {
+  content: '';
+  display: block;
+  clear: both; }
+
+.th, .td {
+  display: table-cell; }
+
+.a-banner {
+  text-align: center;
+  background: url(../img/a_010.jpg);
+  background-size: cover;
+  background-position: bottom center; }
+  .a-banner .a-down i {
+    margin: 20px;
+    color: #86d4f5;
+    font-size: 32px; }
+
+.a-panel {
+  position: relative;
+  text-align: left;
+  border-radius: 50%;
+  width: 100%;
+  box-sizing: border-box;
+  height: 0;
+  padding: 50%;
+  background: url("../img/a_013.jpg");
+  background-size: 100% 100%;
+  background-position: center center; }
+  .a-panel input {
+    width: 100px; }
+  .a-panel .a-panel-item {
+    margin-bottom: 30px; }
+  .a-panel ul {
+    margin-top: 20px; }
+  .a-panel li {
+    display: inline-block;
+    color: #ddd; }
+
+.a-title {
+  font-size: 32px;
+  color: #f3f7f7;
+  margin: 20px; }
+
+.a-panel-control {
+  width: 320px;
+  height: 200px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto; }
+
+.a-text {
+  font-size: 18px;
+  color: #fff;
+  display: inline-block; }
+
+.a-tab div {
+  margin: 40px 20px 20px 0;
+  border: 1px solid #4f9cdd;
+  float: left; }
+  .a-tab div p {
+    color: #95d3e4;
+    font-size: 20px; }
+
+.a-item {
+  line-height: 1.5; }
+
+.a-text-content {
+  color: #fff;
+  font-size: 12px; }
+
+/*=====================================
+            增加活動頁面
+    =======================================*/
+.a-lb-add {
+  background: url("../img/a_008.jpg");
+  padding: 20px;
+  width: 100%;
+  margin: auto;
+  color: #f3f7f7; }
+  .a-lb-add .tr {
+    width: 100%; }
+  .a-lb-add .td {
+    padding: 20px; }
+    .a-lb-add .td textarea {
+      width: 80%;
+      height: 200px;
+      vertical-align: top; }
+  .a-lb-add .table:first-child {
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold; }
+  .a-lb-add .table {
+    width: 100%;
+    margin: auto; }
+    .a-lb-add .table .tr:first-child {
+      width: 100%; }
+    .a-lb-add .table .tr:nth-child(3) p {
+      vertical-align: middle; }
+    .a-lb-add .table .tr:nth-child(2) input {
+      width: 350px; }
+    .a-lb-add .table .thead {
+      padding: 20px; }
+  .a-lb-add .table:first-child .td {
+    border-bottom: 2px solid #fff; }
+  .a-lb-add .table:last-child .td {
+    text-align: center; }
+    .a-lb-add .table:last-child .td input {
+      margin: 50px;
+      color: #f3f7f7; }
+  .a-lb-add .table:nth-child(2) .tr .td:first-child {
+    width: 150px; }
+  .a-lb-add .table:nth-child(2) .tr {
+    border-bottom: 1px dotted #fff; }
+
+.a-x {
+  float: right;
+  font-size: 20px; }
+
+/*=====================================
+            活動詳細頁面
+    =======================================*/
+.a-lb-act {
+  background: url("../img/a_008.jpg");
+  background-position: center top; }
+  .a-lb-act .table {
+    position: relative;
+    margin: auto;
+    width: 100%; }
+    .a-lb-act .table .td {
+      position: relative;
+      padding: 20px;
+      color: #f3f7f7; }
+      .a-lb-act .table .td .a-text {
+        position: relative; }
+    .a-lb-act .table .tr {
+      border-bottom: 1px solid #346671; }
+    .a-lb-act .table .tr span {
+      position: absolute;
+      right: 0;
+      font-size: 16px;
+      color: #fff;
+      vertical-align: middle; }
+    .a-lb-act .table .tr:nth-child(2) .td {
+      text-align: center; }
+      .a-lb-act .table .tr:nth-child(2) .td span {
+        line-height: 72px; }
+      .a-lb-act .table .tr:nth-child(2) .td .a-text {
+        font-size: 32px;
+        vertical-align: middle;
+        display: block; }
+        .a-lb-act .table .tr:nth-child(2) .td .a-text p {
+          margin: 20px;
+          display: inline-block;
+          font-weight: bold; }
+    .a-lb-act .table .tr:nth-child(7) .td .a-text {
+      display: block; }
+    .a-lb-act .table .tr:first-child .td .a-x {
+      font-size: 32px; }
+    .a-lb-act .table .tr:nth-child(8) p {
+      font-size: 28px;
+      text-align: center;
+      margin: 20px; }
+    .a-lb-act .table .tr:nth-child(8) .a-text {
+      line-height: 1.5; }
+    .a-lb-act .table .tr:nth-child(8) .btn-lg {
+      display: block;
+      line-height: 38px;
+      margin: 20px auto; }
+    .a-lb-act .table .tr:nth-child(9) .a-text {
+      width: 100%; }
+    .a-lb-act .table .tr:nth-child(10) .a-text {
+      width: 100%; }
+  .a-lb-act .a-user {
+    font-size: 40px;
+    vertical-align: middle;
+    margin-top: 40px;
+    width: 100%;
+    position: relative; }
+    .a-lb-act .a-user textarea {
+      position: absolute;
+      top: 0;
+      left: 60px;
+      right: 0;
+      margin: auto;
+      vertical-align: middle;
+      height: 50px;
+      width: 85%; }
+
+.a-phone-control {
+  display: none; }
+
+.a-phone-search {
+  display: none; }
+
+@media screen and (max-width: 767px) {
+  .a-map {
+    display: none; }
+  .a-phone-control {
+    display: block;
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center; }
+    .a-phone-control .a-phone-btn {
+      color: #f3f7f7;
+      line-height: 38px; }
+  .a-banner {
+    display: none; }
+  #a-popups {
+    margin-top: 100px; }
+  .a-tab {
+    display: none; }
+  .a-phone-searchContainer {
+    width: 80%;
+    margin: auto; }
+  .a-phone-search {
+    display: block;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+    width: 100%;
+    background-color: #444; }
+    .a-phone-search #a-phone-input_1 {
+      margin-top: 20px; }
+    .a-phone-search input {
+      height: 30px;
+      width: 100%;
+      background-color: #666;
+      border: none;
+      font-size: 20px; }
+    .a-phone-search .a-phone-icon {
+      position: absolute;
+      top: 25px;
+      left: 70px;
+      margin: auto;
+      width: 30px;
+      font-size: 20px; }
+    .a-phone-search .a-phone-icon-2 {
+      position: relative;
+      top: 25px;
+      left: 10px;
+      margin: auto;
+      width: 30px;
+      font-size: 20px; }
+    .a-phone-search .a-phone-input {
+      display: none; }
+    .a-phone-search .fa-chevron-up {
+      cursor: pointer;
+      position: relative;
+      top: 10px;
+      display: block;
+      text-align: left;
+      display: none;
+      font-size: 32px;
+      color: #888; } }
+
+.a-btn-recommend {
+  margin: auto;
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #fa0;
+  line-height: 40px; }
+
+#a-slide-container {
+  overflow: hidden; }
+
+#a-slides {
+  position: fixed;
+  top: 0;
+  left: 0; }
+
+#a-slides {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 200%; }
+
+.a-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+  text-align: center; }
+  .a-slide ul {
+    margin-top: 50px; }
+  .a-slide li {
+    text-align: center;
+    font-size: 24px;
+    color: #fff;
+    margin: 20px; }
+
+.a-r-title {
+  font-size: 32px;
+  color: #f3f7f7;
+  margin-top: 200px; }
+
+.a-slide .content {
+  text-align: center;
+  color: #fff;
+  font-size: 30px; }
+
+@keyframes circle {
+  100% {
+    stroke-dashoffset: 0; } }
+
+.a-r-star {
+  z-index: -1;
+  opacity: 0.8;
+  position: absolute;
+  top: 200px;
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: scale(1.7); }
+
+.a-r-cover {
+  text-align: center; }
+
+#a-slide-1, #a-slide-2, #a-slide-3, #a-slide-4 {
+  background: no-repeat center center;
+  background-size: cover; }
+
+#a-slide-1 {
+  background-image: url("../../img/a_004.jpg");
+  transform: translate(0, 0); }
+  #a-slide-1 .a-r-star {
+    stroke-dashoffset: 3000;
+    stroke-dasharray: 3000; }
+  #a-slide-1 #svg_2 {
+    animation: circle 2s linear both; }
+  #a-slide-1 #svg_6 {
+    animation: circle 2s 1.3s linear both; }
+  #a-slide-1 li {
+    display: inline-block; }
+
+#a-slide-2 {
+  background-image: url("../../img/a_004.jpg");
+  transform: translate(0, 100%); }
+  #a-slide-2 .a-r-star {
+    stroke-dashoffset: 5000;
+    stroke-dasharray: 5000;
+    top: -70px; }
+  #a-slide-2 #svg_4 {
+    animation: circle 5s  linear both; }
+  #a-slide-2 #svg_5 {
+    animation: circle 5s linear both; }
+
+#a-slide-3 {
+  background-image: url("../../img/a_004.jpg");
+  transform: translate(100%, 100%) rotate(180deg); }
+
+#a-slide-4 {
+  background-image: url("../../img/a_004.jpg");
+  transform: translate(100%, 200%); }
+
+html, body {
+  margin: 0;
+  padding: 10px;
+  -webkit-backface-visibility: hidden; }
+
+/* text-based popup styling */
+.white-popup {
+  position: relative;
+  max-width: 80%;
+  margin: 0 auto; }
+
+/* 
+
+====== Zoom effect ======
+
+*/
+.mfp-zoom-in {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-zoom-in .mfp-with-anim {
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+    transform: scale(0.8); }
+  .mfp-zoom-in.mfp-bg {
+    opacity: 0;
+    transition: all 0.3s ease-out; }
+  .mfp-zoom-in.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: scale(1); }
+  .mfp-zoom-in.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-zoom-in.mfp-removing .mfp-with-anim {
+    transform: scale(0.8);
+    opacity: 0; }
+  .mfp-zoom-in.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== Newspaper effect ======
+
+*/
+.mfp-newspaper {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-newspaper .mfp-with-anim {
+    opacity: 0;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.5s;
+    transform: scale(0) rotate(500deg); }
+  .mfp-newspaper.mfp-bg {
+    opacity: 0;
+    transition: all 0.5s; }
+  .mfp-newspaper.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: scale(1) rotate(0deg); }
+  .mfp-newspaper.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-newspaper.mfp-removing .mfp-with-anim {
+    transform: scale(0) rotate(500deg);
+    opacity: 0; }
+  .mfp-newspaper.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== Move-horizontal effect ======
+
+*/
+.mfp-move-horizontal {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-move-horizontal .mfp-with-anim {
+    opacity: 0;
+    transition: all 0.3s;
+    transform: translateX(-50px); }
+  .mfp-move-horizontal.mfp-bg {
+    opacity: 0;
+    transition: all 0.3s; }
+  .mfp-move-horizontal.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: translateX(0); }
+  .mfp-move-horizontal.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-move-horizontal.mfp-removing .mfp-with-anim {
+    transform: translateX(50px);
+    opacity: 0; }
+  .mfp-move-horizontal.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== Move-from-top effect ======
+
+*/
+.mfp-move-from-top {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-move-from-top .mfp-content {
+    vertical-align: top; }
+  .mfp-move-from-top .mfp-with-anim {
+    opacity: 0;
+    transition: all 0.2s;
+    transform: translateY(-100px); }
+  .mfp-move-from-top.mfp-bg {
+    opacity: 0;
+    transition: all 0.2s; }
+  .mfp-move-from-top.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: translateY(0); }
+  .mfp-move-from-top.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-move-from-top.mfp-removing .mfp-with-anim {
+    transform: translateY(-50px);
+    opacity: 0; }
+  .mfp-move-from-top.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== 3d unfold ======
+
+*/
+.mfp-3d-unfold {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-3d-unfold .mfp-content {
+    perspective: 2000px; }
+  .mfp-3d-unfold .mfp-with-anim {
+    opacity: 0;
+    transition: all 1.2s ease-in-out;
+    transform-style: preserve-3d;
+    transform: rotateY(-60deg); }
+  .mfp-3d-unfold.mfp-bg {
+    opacity: 0;
+    transition: all 1s; }
+  .mfp-3d-unfold.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: rotateY(0deg); }
+  .mfp-3d-unfold.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-3d-unfold.mfp-removing .mfp-with-anim {
+    transform: rotateY(60deg);
+    opacity: 0; }
+  .mfp-3d-unfold.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== Zoom-out effect ======
+
+*/
+.mfp-zoom-out {
+  /* start state */
+  /* animate in */
+  /* animate out */ }
+  .mfp-zoom-out .mfp-with-anim {
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.3); }
+  .mfp-zoom-out.mfp-bg {
+    opacity: 0;
+    transition: all 0.3s ease-out; }
+  .mfp-zoom-out.mfp-ready .mfp-with-anim {
+    opacity: 1;
+    transform: scale(1); }
+  .mfp-zoom-out.mfp-ready.mfp-bg {
+    opacity: 0.8; }
+  .mfp-zoom-out.mfp-removing .mfp-with-anim {
+    transform: scale(1.3);
+    opacity: 0; }
+  .mfp-zoom-out.mfp-removing.mfp-bg {
+    opacity: 0; }
+
+/* 
+
+====== "Hinge" close effect ======
+
+*/
+@keyframes hinge {
+  0% {
+    transform: rotate(0);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out; }
+  20%, 60% {
+    transform: rotate(80deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out; }
+  40% {
+    transform: rotate(60deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out; }
+  80% {
+    transform: rotate(60deg) translateY(0);
+    opacity: 1;
+    transform-origin: top left;
+    animation-timing-function: ease-in-out; }
+  100% {
+    transform: translateY(700px);
+    opacity: 0; } }
+
+.hinge {
+  animation-duration: 1s;
+  animation-name: hinge; }
+
+.mfp-with-fade .mfp-content, .mfp-with-fade.mfp-bg {
+  opacity: 0;
+  transition: opacity .5s ease-out; }
+
+.mfp-with-fade.mfp-ready .mfp-content {
+  opacity: 1; }
+
+.mfp-with-fade.mfp-ready.mfp-bg {
+  opacity: 0.8; }
+
+.mfp-with-fade.mfp-removing.mfp-bg {
+  opacity: 0; }
+
+/* preview styles */
