--- a/src/scss/assets/_font.scss
+++ b/src/scss/assets/_font.scss
@@ -12,6 +12,12 @@ $fz-h3 	 :  $fz-base*2.8;
 
 $fz-h4   :  $fz-base*2.4;
 
+$fz-h5	 :  $fz-base*2;
+
+$fz-h6   :  $fz-base*1.6;
+
+$fz-h7   :  $fz-base*1.2;
+
 $fz-p    :  $fz-base*1.8;
 
 
