--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,9 +6,10 @@
 @import "assets/grid";
 @import "../libs/font-awesome/css/font-awesome.min.css";
 
-@import "layout/layout";
+// @import "layout/layout";
 @import "pageIndex/pageIndex";
 @import "pageActivity/pageActivity";
 @import "pageForum/pageForum";
 @import "pagePhoto/pagePhoto";
 @import "pageKnowledge/pageKnowledge";
+@import "pageMember/pageMember";
