--- a/src/scss/pageForum/_md.scss
+++ b/src/scss/pageForum/_md.scss
@@ -1,5 +1,441 @@
 @include respones(md) {
-	//在此輸入內容
+	//993px以上
+	#f_nav{
+		width: 100%;
+		height: 70px;
+		// background-color: rgba(0,0,0,0.3);
+		background-color: rgba(20, 21, 26, 0.5);
+		position: fixed;
+		z-index: 100;
+	}
+	.f_section{
+		height: 100vh;
+		width: 100%;
+	}
+
+	#f_section1{
+			color: $white;
+			/*background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%); */
+			background-image: url(../img/forum/f_001.jpg);
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			background-size: cover;
+			position: relative;
+			text-align: center;
+		&:before{
+			content: '';
+			display: inline-block;
+			height: 100%;
+			width: 0px;
+			background-color: #fff;
+			vertical-align: middle;
+		}
+		.f_title{
+			width: 30%;
+			// height: 50%;
+			text-align: center;
+			display: inline-block;
+			vertical-align: middle;
+			
+			h1{
+				font-size: $fz-h1;
+				text-shadow:1px 1px 5px #000;
+			}
+		}
+
+		.f_desc{
+			width: 70%;
+			height: 30%;
+			position: absolute;
+			top: 70%;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin:auto;
+
+			h3{
+				font-size: $fz-h3;
+				color: rgba(255,255,255,0.7);
+				margin-bottom: 10px;
+				text-shadow:1px 1px 2px #333;
+			}
+			.fa-angle-double-down{
+				font-size: 50px;
+				color:#333;
+				margin-top: 30px;
+				font-weight: 300;
+			}
+
+		}
+	}
+
+	//第一區結束 第二區開始
+
+	#f_section2, #f_section3{
+		background-image: url(../img/forum/f_003.jpg);
+		background-repeat: no-repeat;
+		-webkit-background-size: cover;
+		background-size: cover;
+		padding-top: 80px;  //上方保留給nav
+		position: relative;
+
+		#f_subnav{
+			// position: fixed;
+			// z-index: 1000;
+			// top: 80px;
+			background-color: rgba(51, 51, 51, 0.66);
+		    padding: 10px;
+		    width: 100%;
+
+		}
+	
+		.f_tab{
+			width: 50%;	
+			// display: inline-block;
+			float: left;
+			li{
+				display: inline-block;
+				border: 1px solid  rgba(255,255,255,0.7);
+				margin-right: 5px;
+				
+				a{
+					display: block;
+					color: rgba(255,255,255,0.7);
+					font-size: 18px;
+					padding: 10px;
+
+				}
+				//第一個tab被選取狀態
+				&.f_tab_active{
+					border: 2px solid  rgba(255,255,255,1);
+					// background-color: rgba(255,255,255,0.5);
+					// box-shadow:-1px 1px 3px #ddd;
+					a{
+						color: $green-blue;
+					}
+				}
+				//第一個tab設定結束
+
+				&:hover{
+					border: 2px solid  rgba(255,255,255,1);
+					box-shadow:-1px 1px 3px #ddd;
+					a{
+						color: $green-blue;
+					}
+				}
+			}
+			
+		}
+
+		//f_fn_area功能區設定開始
+
+		//功能區end
+		.f_fn_area{
+			// height: 38px;
+			width: 50%;
+			// display: inline-block;
+			float: right;
+			button{
+				font-size: 18px;
+				color: $white;
+				letter-spacing: 0.02em;
+			}
+
+			.f_search{
+				display: inline-block;
+				// width: 18%;
+				height: 38px;
+				margin-left: 10px;
+				position: relative;
+				
+				input{
+					width: 100%;
+					height: 100%;
+					font-size: 14px;
+					padding: 5px 5px 5px 30px;
+					background-color: rgba(0,0,0,0.3);
+					border-radius: 5px;
+					border: 1px solid rgba(255,255,255,0.7);
+					color:#fff;
+				}
+
+				.fa-search{
+					position: absolute;
+					color: rgba(255, 255, 255, 0.8);
+					font-size: 22px;
+					left: 7px;
+					top: 7px;
+				}
+			}
+		}
+
+		//論壇文章區塊
+		.f_content{
+			width: 100%;
+			height: 70vh;
+			margin-top: 40px;
+			// background-color: rgba(255,255,255,0.3);
+			overflow-y: auto;
+        //電梯設定
+			.f_scroll{
+				display: inline-block;
+			    width: 0px;
+			    height: 100%;
+			    border: 2px dashed #0ce3ec;
+			    margin-left: 60px;
+			}
+
+			.f_posts{
+				display: inline-block;
+				width: 80%;
+				height: 100%;
+				margin-left: 100px;
+				// background-color: rgba(255,255,255,0.5);
+
+				table{
+					width: 100%;
+					color: $white;
+					border-collapse:separate;
+					border-spacing: 0;
+					margin-top: 20px;
 
 
+					thead{
+
+						// background-color: red;
+
+						tr{
+							width: 100%;
+							height: 50px;
+							font-size: 16px;
+							border: 1px solid #000;
+							border-radius: 50%;
+							background-color: rgba(12, 227, 236, 0.8);
+						
+							th{
+								padding-left: 10px;
+								text-shadow: 1px 1px 1px #000;
+
+								.fa-sticky-note{
+									background-color: rgb(31, 116, 119);
+									width: 40px;
+									height: 40px;
+									border-radius:50%;
+									line-height: 40px;
+									text-align: center;
+									font-size: 20px;
+									margin-right: 20px; 
+									box-shadow: 1px 1px 2px #000 inset;
+									// text-shadow: 1px 1px 1px #eee;
+								}
+							}
+						
+						}
+					}
+
+					tbody{
+						tr{
+							width: 100%;
+							height: 70px;
+							font-size: 16px;
+							border: 1px solid #000;
+							border-radius: 50%;
+							background-color: rgba(12, 227, 236, 0.1);
+							margin-top: 50px;
+						
+							td{
+								padding-left: 10px;
+								// font-size: 20px;
+
+								.fa-commenting{
+									background-color: rgba(0,0,0,0.7);
+									width: 40px;
+									height: 40px;
+									border-radius:5px;
+									line-height: 40px;
+									text-align: center;
+									font-size: 20px;
+									margin-right: 20px; 
+									color: #aaa;
+								}
+
+							}
+
+							.f_topic{
+								h4, p{
+									display: inline-block;
+									letter-spacing: 0.05em;
+								}
+
+								h4>a{
+									font-size: 16px;
+									// color: rgb(12, 227, 236);
+									color: $white;
+									text-shadow:1px 1px 1px #000;
+								}
+							}
+
+							.f_response{
+								p{
+									display: inline-block;
+									font-size: 14px;
+									letter-spacing: 0.05em;
+								}
+								i{
+									margin-right: 5px;
+								}
+								.fa-eye{
+									color: #aaa;
+									font-size: 20px;
+								}
+								.fa-comment-o{
+									margin-left: 10px;
+									color: #aaa;
+									font-size: 20px;
+								}
+
+							}
+
+							.f_user{
+								font-size: 14px;
+								color: rgba(255,255,255,0.8);
+								p{
+									padding-bottom: 5px;
+									font-family: Arial;
+									letter-spacing: 0.05em;
+
+									&:nth-child(1){
+										display: inline-block;
+										vertical-align: middle;
+									}
+
+									&:nth-child(2){
+										display: inline-block;
+										vertical-align: middle;
+									}
+
+									&:nth-child(3){
+										color:rgb(12, 227, 236);
+										font-size: 12px;
+										display: inline-block;
+										vertical-align: middle;
+
+									}
+								}
+								
+							}
+						
+						}
+					}
+
+					
+				}	
+			}
+
+		//論壇文章end
+		}
+	
+		
+	}
+	#f_section3{
+		background-image: url(../img/forum/f_001.jpg);
+	}
+
+	#f_lightbox{
+		width: 100%;
+		height: 100vh;
+		background-color: rgba(0,0,0,0.8);
+		// background-image: url(../img/forum/f_003.jpg);
+		color: #fff;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 9999;
+		overflow: hidden;
+
+		.f_lightbox_content{
+			width: 80%;
+			height: 80%;
+			// border: 1px solid #fff;
+			// background-color:  rgba(0,0,0,0.3);
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+			overflow: auto;
+
+
+			.fa-times{
+				font-size: 25px;
+				float: right;
+				cursor: pointer;
+			}
+
+			table{
+				margin: auto;
+				margin-top: 60px;
+				// padding:3px;
+				border: 1px solid rgba(255,255,255,0.5);
+				letter-spacing: 0.05em;
+				font-family: Arial;
+				color:  rgba(255,255,255,0.7);
+
+				th, td{
+					padding:15px; 
+				}
+
+				td{
+					border-bottom: 1px solid #fff;
+				}
+
+				th{
+					background-color: #1f4c74;
+				}
+
+				td>p{
+					line-height: 1.5em;
+				}
+
+				.user_level{
+						
+						color: #877a5f;	
+				}
+
+				.f_btn{
+					width: 100%;
+					height: 20px;
+					margin-top: 30px;
+					text-align: left;
+
+					button{
+						width: 40px;
+						height: 25px;
+						border-radius: 5px;
+						border: 1px solid $purple;
+						background-color: rgba(0,0,0,0.3);
+						color: $purple;
+						text-shadow:1px 1px 1px #000;
+						float: right;
+						margin-left: 10px;
+
+					}
+				}	
+					
+
+				
+			}
+
+				
+			
+
+
+		}
+
+	}
+
+//993px以上結束	
 }
