--- a/src/scss/pageActivity/pageMain/_xs.scss
+++ b/src/scss/pageActivity/pageMain/_xs.scss
@@ -17,9 +17,9 @@
 		line-height: 38px;
 	}
 }
-.a-banner{
-	display: none;
-}
+// .a-banner{
+// 	display: none;
+// }
 #a-popups{
 	margin-top: 100px;
 }
@@ -82,7 +82,9 @@
 		color:#888;
 	}
 }
-
+.wrap{
+	display: none;
+}
 
 
 
