--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -39,11 +39,13 @@
 .a-panel{
 	position: relative;
 	text-align: left;
-	border-radius: 50%;
+	// border-radius: 50%;
 	width: 100%;
 	box-sizing:border-box;
 	height: 0;
-	padding: 50%;
+	// padding: 50%;
+	height: 600px;
+
 	background: url("../img/a_015.jpg");
 	background-size:100% 100%;
 	background-position: center center;
