--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import "assets/grid";
 @import "../libs/font-awesome/css/font-awesome.min.css";
 
-// @import "layout/layout";
+@import "layout/layout";
 @import "pageIndex/pageIndex";
 @import "pageActivity/pageActivity";
 @import "pageForum/pageForum";
