--- a/src/scss/pageForum/_md.scss
+++ b/src/scss/pageForum/_md.scss
@@ -1,13 +1,10 @@
 @include respones(md) {
 	//993px以上
-	#f_nav{
-		width: 100%;
-		height: 70px;
-		// background-color: rgba(0,0,0,0.3);
-		background-color: rgba(20, 21, 26, 0.5);
-		position: fixed;
-		z-index: 100;
+	html, body{
+		padding: 0px;
 	}
+
+
 	.f_section{
 		height: 100vh;
 		width: 100%;
@@ -64,6 +61,9 @@
 				color:#333;
 				margin-top: 30px;
 				font-weight: 300;
+				animation:  m_float .8s linear 0s infinite alternate;
+				opacity: 0.6;
+
 			}
 
 		}
