--- a/src/scss/pageForum/_pageForum.scss
+++ b/src/scss/pageForum/_pageForum.scss
@@ -1,7 +1,421 @@
-@import "xs";
-@import "sm";
-@import "md";
+
+// @import "sm";
+// @import "md";
 @import "lg";
 
 
 //此處為 共用設定
+
+html, body{
+		// padding: 0px;
+	}
+.btn-blue:hover{
+	background-color: rgba(0,0,0,0.3);
+	color: #4f9cdd;
+	margin-top: 1px;
+	text-shadow:1px 1px 1px #000;
+	box-shadow: 1px 5px 10px #000;
+}
+
+
+	.f_section{
+		height: 100vh;
+		width: 100%;
+	}
+
+	#f_section1{
+			color: $white;
+			// background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%); 
+			background-image: url(../img/forum/f_001.jpg);
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			background-size: cover;
+			position: relative;
+			text-align: center;
+
+
+		&:before{
+			content: '';
+			display: inline-block;
+			height: 100%;
+			width: 0px;
+			background-color: #fff;
+			vertical-align: middle;
+		}
+		// @keyframes titleshow{
+		// 	0% {opacity: 0.2;}
+		// 	50%{opacity: 0.5;}
+		// 	75%{opacity: 0.7;}
+		// 	100%{opacity: 1;}
+		// }
+		.f_title{
+			width: 30%;
+			// height: 50%;
+			text-align: center;
+			display: inline-block;
+			vertical-align: middle;
+			// opacity: 0;
+			// transform:Scale(0.1);
+			// animation: titleshow 1s all;
+			
+			h1{
+				font-size: $fz-h1;
+				text-shadow:1px 1px 5px #000;
+			}
+		}
+
+		.f_desc{
+			width: 70%;
+			height: 30%;
+			position: absolute;
+			top: 70%;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin:auto;
+
+			h3{
+				font-size: $fz-h3;
+				color: rgba(255,255,255,0.7);
+				margin-bottom: 10px;
+				text-shadow:1px 1px 2px #333;
+			}
+			.fa-angle-double-down{
+				font-size: 50px;
+				color:#333;
+				margin-top: 30px;
+				font-weight: 300;
+				animation:  m_float .8s linear 0s infinite alternate;
+				opacity: 0.6;
+
+			}
+
+		}
+	}
+
+
+	//forum content start
+	#f_section2{
+		height: 100vh;
+
+		#f_tab{
+			width: 45%;
+			float: left;
+		}
+		
+	}
+		.f_fn_area{
+			// height: 38px;
+			width: 50%;
+			// display: inline-block;
+			float: right;
+			padding-top: 15px;
+			position: relative;
+		    z-index: 1;
+
+
+			button{
+				font-size: 18px;
+				color: $white;
+				letter-spacing: 0.02em;
+
+				
+			}
+			
+
+			.f_search{
+				display: inline-block;
+				// width: 18%;
+				height: 38px;
+				margin-left: 10px;
+				position: relative;
+				
+				input{
+					width: 100%;
+					height: 100%;
+					font-size: 14px;
+					padding: 5px 10px 5px 30px;
+					background-color: rgba(0,0,0,0.3);
+					border-radius: 5px;
+					border: 1px solid rgba(255,255,255,0.7);
+					color:#fff;
+				}
+
+				.fa-search{
+					position: absolute;
+					color: rgba(255, 255, 255, 0.8);
+					font-size: 22px;
+					left: 7px;
+					top: 7px;
+				}
+			}
+		}
+
+		.f_posts{
+				// display: inline-block;
+				width: 90%;
+				height: 100%;
+				// background-color: rgba(255,255,255,0.5);
+				box-shadow: -1px -1px 2px #333 inset;
+				box-shadow: 1px -1px 5px #333 inset;
+				animation:  m_float 3s linear 0s infinite alternate;
+				margin: auto;
+
+				table{
+					width: 100%;
+					color: $white;
+					border-collapse:separate;
+					border-spacing: 0;
+					margin-top: 20px;
+
+
+
+					thead{
+
+						// background-color: red;
+
+						tr{
+							width: 100%;
+							height: 50px;
+							font-size: 16px;
+							border: 1px solid #000;
+							border-radius: 50%;
+							background-color: rgba(12, 227, 236, 0.8);
+
+						
+							th{
+								padding: 10px;
+								text-shadow: 1px 1px 1px #000;
+
+								.fa-sticky-note{
+									background-color: rgb(31, 116, 119);
+									width: 40px;
+									height: 40px;
+									border-radius:50%;
+									line-height: 40px;
+									text-align: center;
+									font-size: 20px;
+									margin-right: 20px; 
+									box-shadow: 1px 1px 2px #000 inset;
+									// text-shadow: 1px 1px 1px #eee;
+								}
+							}
+						
+						}
+					}
+
+					tbody{
+						tr{
+							width: 100%;
+							height: 70px;
+							font-size: 16px;
+							border: 1px solid #000;
+							border-radius: 50%;
+							background-color: rgba(12, 227, 236, 0.1);
+							margin-top: 50px;
+						
+							td{
+								padding: 10px;
+								// font-size: 20px;
+
+								.fa-commenting{
+									background-color: rgba(0,0,0,0.7);
+									width: 40px;
+									height: 40px;
+									border-radius:5px;
+									line-height: 40px;
+									text-align: center;
+									font-size: 20px;
+									margin-right: 20px; 
+									color: #aaa;
+								}
+
+							}
+
+							.f_topic{
+								h4, p{
+									display: inline-block;
+									letter-spacing: 0.05em;
+								}
+
+								h4>a{
+									font-size: 16px;
+									// color: rgb(12, 227, 236);
+									color: $white;
+									text-shadow:1px 1px 1px #000;
+
+									&:hover{
+										color:rgb(245, 178, 134);
+									}
+								}
+							}
+
+							.f_response{
+								p{
+									display: inline-block;
+									font-size: 14px;
+									letter-spacing: 0.05em;
+								}
+								i{
+									margin-right: 5px;
+								}
+								.fa-eye{
+									color: #aaa;
+									font-size: 20px;
+								}
+								.fa-comment-o{
+									margin-left: 10px;
+									color: #aaa;
+									font-size: 20px;
+								}
+
+							}
+
+							.f_user{
+								font-size: 14px;
+								color: rgba(255,255,255,0.8);
+								text-shadow:1px 1px 1px #000;
+								p{
+									padding-bottom: 5px;
+									font-family: Arial;
+									letter-spacing: 0.05em;
+
+									&:nth-child(1){
+										display: inline-block;
+										vertical-align: middle;
+
+									}
+
+									&:nth-child(2){
+										display: inline-block;
+										vertical-align: middle;
+										margin-right:10px;
+
+										a{
+											color: rgba(70, 130, 180, 1.0); 
+
+											&:hover{
+												color: #86d4f5;; 
+											}
+										}
+										
+									}
+
+									&:nth-child(3){
+										color:rgba(255, 255, 255,0.5);
+										font-size: 12px;
+										display: inline-block;
+										vertical-align: middle;
+
+									}
+								}
+								
+							}
+						
+						}
+					}
+				}	
+			
+		}
+
+	// #lightbox
+	#f_lightbox{
+		width: 100%;
+		height: 100vh;
+		background-color: rgba(0,0,0,0.8);
+		// background-image: url(../img/forum/f_003.jpg);
+		color: #fff;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 9999;
+		overflow: hidden;
+
+		.f_lightbox_content{
+			width: 80%;
+			height: 80%;
+			// border: 1px solid #fff;
+			// background-color:  rgba(0,0,0,0.3);
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+			overflow: auto;
+
+
+			.fa-times{
+				font-size: 25px;
+				float: right;
+				cursor: pointer;
+			}
+
+			table{
+				margin: auto;
+				margin-top: 60px;
+				// padding:3px;
+				border: 1px solid rgba(255,255,255,0.5);
+				letter-spacing: 0.05em;
+				font-family: Arial;
+				color:  rgba(255,255,255,0.7);
+
+				th, td{
+					padding:15px; 
+				}
+
+				td{
+					border-bottom: 1px solid #fff;
+				}
+
+				th{
+					background-color: #1f4c74;
+				}
+
+				td>p{
+					line-height: 1.5em;
+				}
+
+				.user_level{
+						
+						color: #877a5f;	
+				}
+
+				.f_btn{
+					width: 100%;
+					height: 20px;
+					margin-top: 30px;
+					text-align: left;
+
+					button{
+						width: 40px;
+						height: 25px;
+						border-radius: 5px;
+						border: 1px solid $purple;
+						background-color: rgba(0,0,0,0.3);
+						color: $purple;
+						text-shadow:1px 1px 1px #000;
+						float: right;
+						margin-left: 10px;
+
+					}
+				}	
+					
+
+				
+			}
+
+				
+			
+
+
+		}
+
+	}
+
+
+@import "xs";
+
+
